[gd_scene load_steps=2 format=2]

[ext_resource path="res://testStages/henryTestSelect.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="boomer" type="Button" parent="."]
margin_left = 319.456
margin_top = 387.81
margin_right = 507.456
margin_bottom = 469.81
rect_scale = Vector2( 1.67362, 1.40413 )
text = "WALKER TEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boomer2" type="Button" parent="."]
margin_left = 314.858
margin_top = 580.9
margin_right = 502.858
margin_bottom = 662.9
rect_scale = Vector2( 1.67362, 1.40413 )
text = "SHADE TEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="random" type="Button" parent="."]
margin_left = 1325.53
margin_top = 398.131
margin_right = 1513.53
margin_bottom = 480.131
rect_scale = Vector2( 1.67362, 1.40413 )
text = "random"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="random2" type="Button" parent="."]
margin_left = 1331.94
margin_top = 557.974
margin_right = 1519.94
margin_bottom = 639.974
rect_scale = Vector2( 1.67362, 1.40413 )
text = "random2"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="boomer" to="." method="_on_boomer_pressed"]
[connection signal="pressed" from="boomer2" to="." method="_on_boomer2_pressed"]
[connection signal="pressed" from="random" to="." method="_on_random_pressed"]
[connection signal="pressed" from="random2" to="." method="_on_random2_pressed"]
